--- a/addons/billetera/views/views.xml
+++ b/addons/billetera/views/views.xml
@@ -77,7 +77,7 @@
             </field>
         </record>
 
-        <menuitem id="menu_wallet_root" name="Wallet Pro" sequence="10"/>
+        <menuitem id="menu_wallet_root" name="Billeteras Virtuales" sequence="10"/>
         <menuitem id="menu_wallet_main" name="Mis Billeteras" 
                   parent="menu_wallet_root" action="action_wallet_account" sequence="10"/>
     </data>
