--- a/addons/gimnasio/views/views.xml
+++ b/addons/gimnasio/views/views.xml
@@ -1,37 +1,59 @@
 <odoo>
   <data>
-  
     <record model="ir.ui.view" id="gym_member_view_list">
       <field name="name">gym.member.list</field>
       <field name="model">gym.member</field>
       <field name="arch" type="xml">
-        <list>
-          <field name="name"/>
-          <field name="dni"/>
+        <list decoration-success="active_membership == True" decoration-danger="active_membership == False">
+          <field name="partner_id"/> <field name="dni"/>
           <field name="email"/>
           <field name="plan_id"/>
           <field name="start_date"/>
           <field name="end_date"/>
-          <field name="active_membership"/>
+          <field name="active_membership" widget="boolean_toggle"/>
         </list>
       </field>
     </record>
 
+    <record model="ir.ui.view" id="gym_member_view_form">
+      <field name="name">gym.member.form</field>
+      <field name="model">gym.member</field>
+      <field name="arch" type="xml">
+        <form>
+          <header>
+            <button name="action_renew_membership" string="Renovar Plan" 
+                    type="object" class="oe_highlight"/>
+          </header>
+          <sheet>
+            <group>
+              <group string="Información del Socio">
+                <field name="partner_id" placeholder="Seleccione contacto..."/>
+                <field name="dni"/>
+                <field name="email"/>
+              </group>
+              <group string="Detalles de Membresía">
+                <field name="plan_id"/>
+                <field name="start_date"/>
+                <field name="end_date"/>
+                <field name="active_membership" readonly="1"/>
+              </group>
+            </group>
+          </sheet>
+        </form>
+      </field>
+    </record>
 
     <record model="ir.actions.act_window" id="gym_member_action_window">
-      <field name="name">Gimnasio</field>
+      <field name="name">Socios del Gimnasio</field>
       <field name="res_model">gym.member</field>
       <field name="view_mode">list,form</field>
     </record>
 
-
-
-   <menuitem name="Gimnasio" id="gym_menu_root" web_icon="gym_management,static/description/icon.png"/>
-
-    <menuitem name="Operaciones" id="gym_menu_operations" parent="gym_menu_root"/>
-
+    <menuitem name="Gimnasio" id="gym_menu_root" web_icon="gym_management,static/description/icon.png"/>
+    <menuitem name="Operaciones" id="gym_menu_operations" parent="gym_menu_root" sequence="10"/>
     <menuitem name="Socios" id="gym_menu_member_list" 
               parent="gym_menu_operations" 
-              action="gym_member_action_window"/>
+              action="gym_member_action_window" 
+              sequence="10"/>
   </data>
 </odoo>
