--- a/addons/gym_partner_extension/views/views.xml
+++ b/addons/gym_partner_extension/views/views.xml
@@ -1,21 +1,22 @@
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
-  <data>
-      <record id="view_partner_form_inherit_gym" model="ir.ui.view">
+    <record id="view_partner_form_inherit_gym" model="ir.ui.view">
         <field name="name">res.partner.form.inherit.gym</field>
         <field name="model">res.partner</field>
-        <field name="inherit_id" ref="base.view_partner_form"/> 
+        <field name="inherit_id" ref="base.view_partner_form"/>
         <field name="arch" type="xml">
-            <xpath expr="//field[@name='vat']" position="after">
-              <group string="Información de Gimnasio" name="gym_info" colspan="2">
-                  <field name="is_socio" widget="boolean_toggle"/>
-                  <field name="nro_socio" 
-                        invisible="not is_socio" 
-                        required="is_socio"/>
-                  <field name="fecha_vencimiento" 
-                        invisible="not is_socio"/>
-              </group>
-          </xpath>
+            <xpath expr="//notebook" position="inside">
+                <page string="Gimnasio" name="gym_tab">
+                    <group>
+                        <group string="Estado">
+                            <field name="is_socio" widget="boolean_toggle" readonly="1"/>
+                        </group>
+                        <group string="Fechas">
+                            <field name="fecha_vencimiento" readonly="1" invisible="not is_socio"/>
+                        </group>
+                    </group>
+                </page>
+            </xpath>
         </field>
     </record>
-  </data>
 </odoo>
