--- a/addons/bienes_raices/views/estate_property_views.xml
+++ b/addons/bienes_raices/views/estate_property_views.xml
@@ -72,6 +72,7 @@
                         </group>
                         <group>
                             <field name="expected_price" string="Expected Price"/>
+                            <field name="best_offer" string="Best Offer"/>
                             <field name="selling_price" string="Selling Price"/>
                             <field name="state" string="State"/>
                         </group>
@@ -89,6 +90,7 @@
                                     <field name="garden"/>
                                     <field name="garden_area"/>
                                     <field name="garden_orientation"/>
+                                    <field name="total_area"/>
                                 </group>
                             </group>
                          </page>
@@ -101,9 +103,14 @@
                             </group>
                          </page>
                          <page name="offers" string="Offers">
-                            <list>
-                                <field name="offer_ids"/>
-                            </list>
+                            <field name="offer_ids">
+                                <list>
+                                    <field name="partner_id"/>
+                                    <field name="price"/>
+                                    <field name="validity"/>
+                                    <field name="deadline_date"/>
+                                </list>
+                            </field>
                          </page>
                      </notebook>
                 </sheet>
